# fhenom

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  fhenomConfig.cmake  install_in_fherma_cifar
include/fhenom/: ckks_tensor.h  ckks_vector.h  common.h  context.h  tensor.h
notebooks/: relu.ipynb  relu_cheb_coeffs.txt  sign_evaluation_methods.ipynb
src/: ckks_tensor.cpp  ckks_vector.cpp  coefficients.h  context.cpp  tensor.cpp  utils.cpp  utils.h
tests/: .clang-tidy  CMakeLists.txt  SmallCNN_weights.json  ckks_tensor_test.cpp  ckks_vector_test.cpp  context_test.cpp  tensor_test.cpp  tensors_output.txt  test_utils.cpp  test_utils.h
